chore: Update AWS partition in IAM policies templates to support govcloud and other partitions

--- a/aws-observability-terraform/source-module/templates/iam_assume_role_policy.tmpl
+++ b/aws-observability-terraform/source-module/templates/iam_assume_role_policy.tmpl
@@ -4,7 +4,7 @@
     {
       "Action": "sts:AssumeRole",
       "Principal": {
-        "AWS": "arn:aws:iam::${SUMO_LOGIC_ACCOUNT_ID}:root"
+        "AWS": "arn:${AWS_PARTITION}:iam::${SUMO_LOGIC_ACCOUNT_ID}:root"
       },
       "Effect": "Allow",
       "Condition": {
