--- a/aws-observability-terraform/source-module/templates/iam_s3_source_policy.tmpl
+++ b/aws-observability-terraform/source-module/templates/iam_s3_source_policy.tmpl
@@ -10,8 +10,8 @@
         "s3:ListBucket"
       ],
       "Resource": [
-        "arn:aws:s3:::${BUCKET_NAME}/*",
-        "arn:aws:s3:::${BUCKET_NAME}"
+        "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}/*",
+        "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}"
       ]
     }
   ]
