--- a/aws-observability-terraform/source-module/templates/s3_bucket_policy.tmpl
+++ b/aws-observability-terraform/source-module/templates/s3_bucket_policy.tmpl
@@ -7,7 +7,7 @@
         "Service": "cloudtrail.amazonaws.com"
       },
       "Action": "s3:GetBucketAcl",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}"
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}"
     },
     {
       "Sid": "AWSCloudTrailWrite",
@@ -16,7 +16,7 @@
         "Service": "cloudtrail.amazonaws.com"
       },
       "Action": "s3:PutObject",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}/*",
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}/*",
       "Condition": {
         "StringEquals": {
           "s3:x-amz-acl": "bucket-owner-full-control"
@@ -30,15 +30,15 @@
         "Service": "cloudtrail.amazonaws.com"
       },
       "Action": "s3:ListBucket",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}"
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}"
     },
     {
       "Effect": "Allow",
       "Principal": {
-        "AWS": "arn:aws:iam::${ELB_ACCCOUNT_ID}:root"
+        "AWS": "arn:${AWS_PARTITION}:iam::${ELB_ACCCOUNT_ID}:root"
       },
       "Action": "s3:PutObject",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}/*"
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}/*"
     },
     {
       "Effect": "Allow",
@@ -46,7 +46,7 @@
         "Service": "delivery.logs.amazonaws.com"
       },
       "Action": "s3:PutObject",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}/*",
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}/*",
       "Condition": {
         "StringEquals": {
           "s3:x-amz-acl": "bucket-owner-full-control"
@@ -59,7 +59,7 @@
         "Service": "delivery.logs.amazonaws.com"
       },
       "Action": "s3:GetBucketAcl",
-      "Resource": "arn:aws:s3:::${BUCKET_NAME}"
+      "Resource": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}"
     }
   ],
   "Version": "2008-10-17"
