--- a/aws-observability-terraform/source-module/templates/sns_topic_policy.tmpl
+++ b/aws-observability-terraform/source-module/templates/sns_topic_policy.tmpl
@@ -7,14 +7,14 @@
           "aws:SourceAccount": "${AWS_ACCOUNT}"
         },
         "ArnLike": {
-          "aws:SourceArn": "arn:aws:s3:::${BUCKET_NAME}"
+          "aws:SourceArn": "arn:${AWS_PARTITION}:s3:::${BUCKET_NAME}"
         }
       },
       "Effect": "Allow",
       "Principal": {
         "Service": "s3.amazonaws.com"
       },
-      "Resource": "arn:aws:sns:${AWS_REGION}:${AWS_ACCOUNT}:${SNS_TOPIC_NAME}"
+      "Resource": "arn:${AWS_PARTITION}:sns:${AWS_REGION}:${AWS_ACCOUNT}:${SNS_TOPIC_NAME}"
     }
   ],
   "Version": "2008-10-17"
