fixing invalid policy

--- a/aws-observability-terraform/source-module/templates/iam_assume_role_policy_gov.tmpl
+++ b/aws-observability-terraform/source-module/templates/iam_assume_role_policy_gov.tmpl
@@ -4,7 +4,7 @@
     {
       "Action": "sts:AssumeRole",
       "Principal": {
-        "AWS": "arn:${AWS_PARTITION}:iam::${AWS_ACCOUNT_ID}:${SUMO_IAM_USER}"
+        "AWS": "arn:${AWS_PARTITION}:iam::${AWS_ACCOUNT_ID}:user/${SUMO_IAM_USER}"
       },
       "Effect": "Allow"
     }
